--- a/gb/21/12/7/n13422075.md
+++ b/gb/21/12/7/n13422075.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jdhzke342/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jdhzke342/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jdhzke342/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jdhzke342/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jdhzke342/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jdhzke342/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jdhzke342/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】中共早已向美国宣战（三）</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13422079-GettyImages-1233641476-1-700x420-600x400.jpg" />
+<a href="https://dcz6rimunj42y.cloudfront.net/W7xMQFqnu"><img width="600" src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>2021年6月25日，警察在位于北京的中国共产党博物馆外巡逻。(Noel Celis/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年12月07日讯】（英文大纪元专栏作家Stu Cvrk撰文／温芳编译）难以置信，很多<ahref="https://github.com/jdhzke342/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>人和其它国家仍然相信中国领导人提出的政治口号“共同的未来”、“全过程民主”和“中国仁政”。</p>
-<p><ahref="https://github.com/jdhzke342/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>外交政策和喉舌媒体合作宣传，在国际上维持一副“新冠疫情没有让中共失控”的形象，并不断否认病毒是湖北省实验室人造出来的说法。</p>
-<p>一些西方人也附和“病毒是从蝙蝠传给人”的说法，可是科学家已经发现这个理论漏洞百出。<ahref="https://github.com/jdhzke342/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>人现在终于有点意识到“中国人民解放军”对台湾、印度、菲律宾、日本等国家构成的威胁。</p>
-<p>但是，很有必要把<ahref="https://github.com/jdhzke342/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>更多好战的行为都讲出来，帮助人们系统地了解中共的手段——中共早在几年前已经向美国等其它国家发起三套、每套三招的连环击了。</p>
+	<p>【大纪元2021年12月07日讯】（英文大纪元专栏作家Stu Cvrk撰文／温芳编译）难以置信，很多<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>人和其它国家仍然相信中国领导人提出的政治口号“共同的未来”、“全过程民主”和“中国仁政”。</p>
+<p><ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>外交政策和喉舌媒体合作宣传，在国际上维持一副“新冠疫情没有让中共失控”的形象，并不断否认病毒是湖北省实验室人造出来的说法。</p>
+<p>一些西方人也附和“病毒是从蝙蝠传给人”的说法，可是科学家已经发现这个理论漏洞百出。<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>人现在终于有点意识到“中国人民解放军”对台湾、印度、菲律宾、日本等国家构成的威胁。</p>
+<p>但是，很有必要把<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>更多好战的行为都讲出来，帮助人们系统地了解中共的手段——中共早在几年前已经向美国等其它国家发起三套、每套三招的连环击了。</p>
 <p>本文的第一部分和第二部分已经介绍了前面六招。这个部分讲完最后三招。</p>
 <h2>金融战</h2>
 <p>金融战和经济战密不可分。在1972年中国实行“开放”政策以后，尽管好心的西方人都希望看到最好的金融前景，但是中共仍以重商主义为核心实行控制，操控着人民币的运作。</p>
@@ -38,52 +38,55 @@
 <p>拥有这样的能力、意图、掩盖疫情的做法，向美国非法走私生物材料，证明病毒是从中共军方实验室内造出的科学证据，以及中共有意利用这一切获利的事实，所有这些都说明，中共已经向美国和全世界发起了生物战。</p>
 <h2>结语</h2>
 <p>习近平正领导着中国共产党发动九连招打击美国和其它国家，目标在2049年中共建政百年之际实现中国成为世界第一大国的目标。本文分三个部分，每部分介绍了中共向美国发起的和持续进行的三方面打击。所有这些惊人的证据，都说明中共正在与美国和其它国家从多条战线上同时开战。中共和习近平对数字三的迷信会灵验吗？美国最终会意识到中共政权构成的全面威胁吗？</p>
-<p>（点击可看<ahref=><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/2/n13412647.md#1">第一部分</a>；可看<ahref=><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/5/n13418266.md#1">第二部分</a>）</p>
+<p>（点击可看<ahref=><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/12/2/n13412647.md#1">第一部分</a>；可看<ahref=><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/12/5/n13418266.md#1">第二部分</a>）</p>
 <p><em>作者简介：</em></p>
 <p><em>斯图?库克（Stu Cvrk）曾在美国海军服役30年，在各种现役和预备役部队担任过军官，在中东和西太平洋地区拥有丰富的作战经验；接受过海洋学和系统分析方面的教育，经验丰富；毕业于美国海军学院，接受过古典的博雅教育，这为他撰写政治评论奠定了基础。</em></p>
 <p><em>本文所表达的观点仅代表作者本人的观点，不一定反映《大纪元时报》的观点。</em></p>
 <p><em>原文：<ahref="https://www.theepochtimes.com/communist-china-declared-war-on-the-us-long-ago-part-3_4131201.md#1" target="_blank" rel="noopener noreferrer">Communist China Declared War on the US Long Ago: Part 3</a>刊登于英文《大纪元时报》。</em></p>
-<p>责任编辑：高静#</p>
+<p><span style="color: #008000;"><strong>▼ 相关影片</strong></span></p>
+<p><center><a width="640" b="360" src=""></a><a href="https://dcz6rimunj42y.cloudfront.net/W7xMQFqnu"><img width="600" src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/b2GI6zRJPP0" title="YouTube video player" frameborder="0"allowfullscreen></a></center></p>
+<p>【<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%e7%b4%80%e5%85%83%e6%92%ad%e5%a0%b1.md#1">纪元播报</a>】制作组</p>
+<p>责任编辑：高静#◇</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/11/13/n13373736.md#1">【名家专栏】中共学术间谍活动是另一场瘟疫</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/1/n13410422.md#1">【名家专栏】纳瓦罗新书斥中共五大恶行</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/2/n13412647.md#1">【名家专栏】中共早已向美国宣战（一）</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/5/n13418266.md#1">【名家专栏】中共早已向美国宣战（二）</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/11/13/n13373736.md#1">【名家专栏】中共学术间谍活动是另一场瘟疫</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/12/1/n13410422.md#1">【名家专栏】纳瓦罗新书斥中共五大恶行</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/12/2/n13412647.md#1">【名家专栏】中共早已向美国宣战（一）</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/12/5/n13418266.md#1">【名家专栏】中共早已向美国宣战（二）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340563.md#1" target="_blank">美国务卿：对严重侵犯宗教自由者追责</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/2/n13413207.md#1">【未解之谜】发现隐形器官？！</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/1/n13410518.md#1">明朝三医生懂起死回生之术 淡泊名利令人敬重</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/4/n13417452.md#1">【舞蹈三剑客】印度舞大挑战 只排练4小时</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/11/30/n13408645.md#1">【百年真相】迟来的奖章 医学巨星汤飞凡陨落</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/11/26/n13400621.md#1">古人爱今人赞 “脍炙人口”的美食是哪两味？</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/6/n13420659.md#1">【秦鹏直播】美抵制冬奥 中共威胁报复 俄捅2刀</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/6/n13420073.md#1">【微视频】滴滴退市 股民的机会来了？</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/11/23/n13393929.md#1">【思想领袖】中共如何利用美国“觉醒主义”</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/4/n13417306.md#1">女网协退赛 北京愤怒 还不能让中国人民知道</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/5/n13418073.md#1">《红色轮盘》作者析彭帅案：为何曝光张高丽</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/5/n13418739.md#1">被指抄袭日剧 赵丽颖新戏海报紧急删除</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/6/n13419662.md#1">BTS全员开设个人IG账号 追踪人数迅速飙升</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/5/n13418557.md#1">克鲁尼拒1天逾三千万美元酬劳 原因惊呆网友</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/11/26/n13401058.md#1">楚一丁：美国人为什么喜欢花木兰</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/6/n13419445.md#1">BTS成员V为韩剧《那年，我们的夏天》献唱OST</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/4/n13417029.md#1">怕冷体质可以逆转！3招让你从头到脚变暖</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/11/10/n13367815.md#1">【健康1+1】2022纽约州健保计划注册讲座</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/6/n13419539.md#1">银行户头多出百万美元像恶梦 英女求助媒体</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/6/n13419343.md#1">丹麦降暴风雪 IKEA顾客与员工在店里过夜</a></li>
-<li><a href="https://github.com/jdhzke342/djy/blob/master/gb/21/12/4/n13416837.md#1">一个超简单的捷径 制作土豆蔬菜煎饼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jdhzke342/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jdhzke342/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/7/n13422075.htm">【名家专栏】中共早已向美国宣战（三）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/7/n13422075.htm">【名家专栏】中共早已向美国宣战（三）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jdhzke342/djy/blob/master/gb/21/12/7/n13422075.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jdhzke342/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jdhzke342/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jdhzke342/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jdhzke342/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jdhzke342/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/21/12/7/n13422075.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
